finished html home page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-Hola esto es una prueba.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lista de la compra</title>
+</head>
+
+<body>
+  <header>
+    <h1>Lista de la compra</h1>
+    <nav class="menu">
+      <ul>
+        <li><a href="#">Principal</a></li>
+        <li><a href="#">Lista</a></li>
+        <li><a href="#">Acerca de</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section>
+    <button class="button add list" type="button">
+      +
+    </button>
+    <p>2/3 comprados</p>
+  </section>
+  <section>
+    <div>
+      <input type="checkbox" id="scales" name="scales" checked>
+      <label for="scales">Pan</label>
+    </div>
+    <div>
+      <input type="checkbox" id="horns" name="horns">
+      <label for="horns">Leche</label>
+    </div>
+    <div>
+      <input type="checkbox" id="horns" name="horns">
+      <label for="horns">Cafe</label>
+    </div>
+    <div>
+      <input type="checkbox" id="horns" name="horns">
+      <label for="horns">Tofu</label>
+    </div>
+    <ul style="list-style: none;">
+      <li>0.75€ X</li>
+      <li>X</li>
+      <li>1.20€ X</li>
+      <li>4.35€ X</li>
+    </ul>
+  </section>
+  <section>
+    <p>6.3 €</p>
+  </section>
+</body>
+
+</html>
